[dependencies]
cfg-if = "0.1"
console_log = { version = "0.2", features = ["color"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
visioncortex = { git = "https://github.com/mattjames-canva/visioncortex.git" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires 